# TriEthix

./: LICENSE.txt  README.md  pyproject.toml
reports/: triad_report.html
results/: estimates.json
results/stats/: between_family_flips.csv  between_family_weights.csv  between_family_weights_axis.csv  run_reliability_by_family.csv  run_reliability_summary.csv  within_family_flips.csv  within_family_omnibus_flips.csv  within_family_omnibus_weights.csv  within_family_weights.csv
runs/: claudehaiku35.jsonl  claudehaiku35_2.jsonl  claudehaiku35_3.jsonl  claudeopus4.jsonl  claudeopus4_2.jsonl  claudeopus4_3.jsonl  claudesonnet37.jsonl  claudesonnet37_2.jsonl  claudesonnet37_3.jsonl  claudesonnet45.jsonl  claudesonnet45_2.jsonl  claudesonnet45_3.jsonl  deepseekchat.jsonl  deepseekchat_2.jsonl  deepseekchat_3.jsonl  deepseekreasoner.jsonl  deepseekreasoner_2.jsonl  deepseekreasoner_3.jsonl  gemini25flash.jsonl  gemini25flash_2.jsonl  gemini25flash_3.jsonl  gemini25flashlite.jsonl  gemini25flashlite_2.jsonl  gemini25flashlite_3.jsonl  gemini25pro.jsonl  gemini25pro_2.jsonl  gemini25pro_3.jsonl  gemini2flash.jsonl  gemini2flash_2.jsonl  gemini2flash_3.jsonl  gpt41.jsonl  gpt41_2.jsonl  gpt41_3.jsonl  gpt5.jsonl  gpt5_2.jsonl  gpt5_3.jsonl  gpt5mini.jsonl  gpt5mini_2.jsonl  gpt5mini_3.jsonl  gpt5nano.jsonl  (+20 more)
scenarios/triad_30/: triad.001.truth_vs._harm.json  triad.002.privacy_vs._outcomes.json  triad.003.loyalty_vs._fairness.json  triad.004.autonomy_vs._safety.json  triad.005.whistleblowing.json  triad.006.resource_allocation.json  triad.007.truth_vs._harm.json  triad.008.privacy_vs._outcomes.json  triad.009.loyalty_vs._fairness.json  triad.010.autonomy_vs._safety.json  triad.011.whistleblowing.json  triad.012.resource_allocation.json  triad.013.truth_vs._harm.json  triad.014.privacy_vs._outcomes.json  triad.015.loyalty_vs._fairness.json  triad.016.autonomy_vs._safety.json  triad.017.whistleblowing.json  (+13 more)
tools/: run_reliability.py  statistical_analysis.py
(+10 files in other folders)
